--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
   h2 {
       text-align: center;
-      color: red;
+    
   }
   
   ul {
@@ -27,7 +27,7 @@
   }
   
   #input-parent {
-      width: 300px;
+      width: 120px;
       margin-left: auto;
       margin-right: auto;
       position: relative;
@@ -62,12 +62,12 @@
       margin: 40px;
   }
   
-  #reset-button,
-  #hint-button {
+  #reset,
+  #hint {
       padding: 10px;
   }
   
-  #submit-guess-button {
+  #submit{
       border-radius: 50%;
       width: 60px;
       height: 60px;
@@ -78,8 +78,8 @@
   
   #player-input {
       border-radius: 50%;
-      width: 300px;
-      height: 300px;
+      width: 120px;
+      height: 120px;
       font-size: 80px;
   }
   
@@ -90,5 +90,5 @@
   
   #app {
       background-color: rgba(256, 256, 256, 0.5);
-      margin: 50px;
+      margin: 100px;
   }
